--- a/web/themes/default/common/header.html
+++ b/web/themes/default/common/header.html
@@ -165,7 +165,7 @@
 				<div class="panel panel-menu">
 					{if $frame_section['title']}
 					<div class="panel-heading">
-						<span class="no-collapse">111{$frame_section['title']}<i class="wi wi-appsetting pull-right setting"></i></span>
+						<span class="no-collapse">{$frame_section['title']}<i class="wi wi-appsetting pull-right setting"></i></span>
 					</div>
 					{/if}
 					<ul class="list-group">
